--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -280,19 +280,6 @@
     <Compile Include="Models\UnicodeInterval.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\XamlResources.cs" />
-    <Compile Include="Services\Clipboard\ClipboardService.cs" />
-    <Compile Include="Services\Clipboard\IClipboardService.cs" />
-    <Compile Include="Services\Files\File.cs" />
-    <Compile Include="Services\Files\FilesService.cs" />
-    <Compile Include="Services\Files\IFile.cs" />
-    <Compile Include="Services\Files\IFileExtensions.cs" />
-    <Compile Include="Services\Files\IFilesService.cs" />
-    <Compile Include="Services\Keyboard\IKeyboardListenerService.cs" />
-    <Compile Include="Services\Keyboard\KeyboardListenerService.cs" />
-    <Compile Include="Services\Settings\ISettingsService.cs" />
-    <Compile Include="Services\Settings\SettingsService.cs" />
-    <Compile Include="Services\Share\IShareService.cs" />
-    <Compile Include="Services\Share\ShareService.cs" />
     <Compile Include="StyleSelectors\CodeLibraryEntryItemContainerStyleSelector.cs" />
     <Compile Include="TemplateSelectors\ConsoleEntryTemplateSelector.cs" />
     <Compile Include="TemplateSelectors\IdeResultSectionTemplateSelector.cs" />
@@ -396,6 +383,14 @@
     <ProjectReference Include="..\Brainf_ckSharp.Git\Brainf_ckSharp.Git.csproj">
       <Project>{8000d892-951c-49b3-ae95-db85d909c717}</Project>
       <Name>Brainf_ckSharp.Git</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Brainf_ckSharp.Services.Uwp\Brainf_ckSharp.Services.Uwp.csproj">
+      <Project>{978a84f1-ee57-4a0a-9793-c8404e2d5441}</Project>
+      <Name>Brainf_ckSharp.Services.Uwp</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Brainf_ckSharp.Services\Brainf_ckSharp.Services.csproj">
+      <Project>{ea19c7cc-ab0b-48f0-9b3b-7289b57fb29d}</Project>
+      <Name>Brainf_ckSharp.Services</Name>
     </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp.UWP.Controls.IDE\Brainf_ckSharp.Uwp.Controls.Ide.csproj">
       <Project>{473069aa-080a-493e-b7a8-0bee7b0b00f1}</Project>
