--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -150,7 +150,6 @@
     <Compile Include="Converters\SubPages\UnicodeIntervalConverter.cs" />
     <Compile Include="Converters\SubPages\UserGuideSectionConverter.cs" />
     <Compile Include="Constants\Settings.cs" />
-    <Compile Include="Constants\SettingsKeys.cs" />
     <Compile Include="Controls\DataTemplates\Brainf_ckMemoryCellChunkTemplate.xaml.cs">
       <DependentUpon>Brainf_ckMemoryCellChunkTemplate.xaml</DependentUpon>
     </Compile>
@@ -376,7 +375,7 @@
       <Version>4.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit">
-      <Version>6.1.0-build.9</Version>
+      <Version>6.1.0-build.60</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -391,6 +390,10 @@
     <ProjectReference Include="..\Brainf_ckSharp.Services\Brainf_ckSharp.Services.csproj">
       <Project>{ea19c7cc-ab0b-48f0-9b3b-7289b57fb29d}</Project>
       <Name>Brainf_ckSharp.Services</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Brainf_ckSharp.Shared\Brainf_ckSharp.Shared.csproj">
+      <Project>{a2b53303-9594-4975-91bd-0ecd83ad9cf1}</Project>
+      <Name>Brainf_ckSharp.Shared</Name>
     </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp.UWP.Controls.IDE\Brainf_ckSharp.Uwp.Controls.Ide.csproj">
       <Project>{473069aa-080a-493e-b7a8-0bee7b0b00f1}</Project>
