Moved messages and models to shared project

--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -240,41 +240,9 @@
     <Compile Include="Helpers\UI\TitleBarHelper.cs" />
     <Compile Include="MarkupExtensions\BooleanExtension.cs" />
     <Compile Include="MarkupExtensions\FontIconExtension.cs" />
-    <Compile Include="Messages\Abstract\ValueChangedMessageBase{T}.cs" />
-    <Compile Include="Messages\Console\Commands\ClearCommandRequestMessage.cs" />
-    <Compile Include="Messages\Console\Commands\ClearConsoleScreenRequestMessage.cs" />
-    <Compile Include="Messages\Console\Commands\DeleteOperatorRequestMessage.cs" />
-    <Compile Include="Messages\Console\Commands\RepeatCommandRequestMessage.cs" />
-    <Compile Include="Messages\Console\Commands\RestartConsoleRequestMessage.cs" />
-    <Compile Include="Messages\Console\Commands\RunCommandRequestMessage.cs" />
-    <Compile Include="Messages\Console\MemoryState\MemoryStateChangedNotificationMessage.cs" />
-    <Compile Include="Messages\Console\MemoryState\MemoryStateRequestMessage.cs" />
-    <Compile Include="Messages\Ide\RunIdeScriptRequestMessage.cs" />
-    <Compile Include="Messages\Ide\DeleteCharacterRequestMessage.cs" />
-    <Compile Include="Messages\Ide\InsertNewLineRequestMessage.cs" />
-    <Compile Include="Messages\Ide\LoadSourceCodeRequestMessage.cs" />
-    <Compile Include="Messages\Ide\PickOpenFileRequestMessage.cs" />
-    <Compile Include="Messages\Ide\SaveFileAsRequestMessage.cs" />
-    <Compile Include="Messages\Ide\SaveFileRequestMessage.cs" />
-    <Compile Include="Messages\InputPanel\OperatorKeyPressedNotificationMessage.cs" />
-    <Compile Include="Messages\InputPanel\StdinRequestMessage.cs" />
-    <Compile Include="Messages\Navigation\LoadingStateUpdateNotificationMessage.cs" />
-    <Compile Include="Messages\Navigation\SubPageCloseRequestMessage.cs" />
-    <Compile Include="Messages\Navigation\SubPageNavigationRequestMessage.cs" />
-    <Compile Include="Messages\Services\SettingChangedNotificationMessage.cs" />
-    <Compile Include="Models\Console\ConsoleRestart.cs" />
-    <Compile Include="Models\Console\ConsoleCommand.cs" />
-    <Compile Include="Models\Console\ConsoleException.cs" />
-    <Compile Include="Models\Console\ConsoleResult.cs" />
-    <Compile Include="Models\Console\ConsoleSyntaxError.cs" />
-    <Compile Include="Models\Console\Controls\Brainf_ckMemoryCellChunk.cs" />
-    <Compile Include="Models\Console\Interfaces\IConsoleEntry.cs" />
-    <Compile Include="Models\Ide\CodeLibraryEntry.cs" />
-    <Compile Include="Models\Ide\CodeMetadata.cs" />
-    <Compile Include="Models\Ide\SourceCode.cs" />
-    <Compile Include="Models\Ide\Views\IdeResultWithSectionInfo.cs" />
-    <Compile Include="Models\UnicodeCharacter.cs" />
-    <Compile Include="Models\UnicodeInterval.cs" />
+    <Compile Include="Messages\LoadingStateUpdateNotificationMessage.cs" />
+    <Compile Include="Messages\SubPageCloseRequestMessage.cs" />
+    <Compile Include="Messages\SubPageNavigationRequestMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\XamlResources.cs" />
     <Compile Include="StyleSelectors\CodeLibraryEntryItemContainerStyleSelector.cs" />
