--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -153,19 +153,19 @@
     <Compile Include="Controls\DataTemplates\Brainf_ckMemoryCellChunkTemplate.xaml.cs">
       <DependentUpon>Brainf_ckMemoryCellChunkTemplate.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\DataTemplates\GitHub\DeveloperTemplate.xaml.cs">
+    <Compile Include="Controls\DataTemplates\DeveloperTemplate.xaml.cs">
       <DependentUpon>DeveloperTemplate.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\DataTemplates\JumpList\SemanticZoomZoomedOutViewHeaderTemplate.cs" />
     <Compile Include="Controls\DataTemplates\JumpList\SemanticZoomZoomedInViewHeaderTemplate.cs" />
-    <Compile Include="Controls\DataTemplates\Misc\FeaturedLinkTemplate.xaml.cs">
+    <Compile Include="Controls\DataTemplates\FeaturedLinkTemplate.xaml.cs">
       <DependentUpon>FeaturedLinkTemplate.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Host\InputPanel\Header\MinimalHeaderButton.cs" />
     <Compile Include="Controls\Host\InputPanel\Header\StdinHeader.xaml.cs">
       <DependentUpon>StdinHeader.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\Host\InputPanel\MemoryViewer\CompactMemoryViewer.xaml.cs">
+    <Compile Include="Controls\Host\InputPanel\CompactMemoryViewer.xaml.cs">
       <DependentUpon>CompactMemoryViewer.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Host\InputPanel\VirtualKeyboard\OperatorButton.cs" />
@@ -372,11 +372,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\DataTemplates\GitHub\DeveloperTemplate.xaml">
+    <Page Include="Controls\DataTemplates\DeveloperTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\DataTemplates\Misc\FeaturedLinkTemplate.xaml">
+    <Page Include="Controls\DataTemplates\FeaturedLinkTemplate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -388,7 +388,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Controls\Host\InputPanel\MemoryViewer\CompactMemoryViewer.xaml">
+    <Page Include="Controls\Host\InputPanel\CompactMemoryViewer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
