--- a/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
+++ b/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
@@ -133,7 +133,7 @@
       <Version>6.2.9</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.0.0</Version>
+      <Version>6.1.0-build.62</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
