--- a/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
+++ b/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
@@ -8,10 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Toolkit.HighPerformance\Microsoft.Toolkit.HighPerformance.csproj" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0-build.76" />
   </ItemGroup>
 
 </Project>
