--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -321,7 +321,7 @@
       <Version>6.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.4.0-prerelease.200322001</Version>
+      <Version>2.4.0</Version>
     </PackageReference>
     <PackageReference Include="System.Threading.Tasks.Extensions">
       <Version>4.5.4</Version>
@@ -330,7 +330,7 @@
       <Version>4.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit">
-      <Version>6.1.0-build.62</Version>
+      <Version>6.1.0-build.76</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -365,10 +365,6 @@
     <ProjectReference Include="..\GitHub\GitHub.csproj">
       <Project>{9122f0d6-af88-46a6-b91f-ebafe7f59672}</Project>
       <Name>GitHub</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Microsoft.Toolkit.HighPerformance\Microsoft.Toolkit.HighPerformance.csproj">
-      <Project>{66fd6968-86b8-45d9-9b07-fed7dfc4bf0b}</Project>
-      <Name>Microsoft.Toolkit.HighPerformance</Name>
     </ProjectReference>
     <ProjectReference Include="..\Microsoft.Toolkit.Mvvm\Microsoft.Toolkit.Mvvm.csproj">
       <Project>{7ecb8c9d-3d2b-4678-bdc1-f0d2aa4d2890}</Project>
