--- a/src/Brainf_ckSharp/Brainf_ckSharp.csproj
+++ b/src/Brainf_ckSharp/Brainf_ckSharp.csproj
@@ -10,10 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Toolkit" Version="6.1.0-build.60" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.Toolkit.HighPerformance\Microsoft.Toolkit.HighPerformance.csproj" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0-build.76" />
   </ItemGroup>
 
   <ItemGroup>
