--- a/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
+++ b/src/Brainf_ckSharp.Shared/Brainf_ckSharp.Shared.csproj
@@ -24,4 +24,6 @@
     <ProjectReference Include="..\Microsoft.Toolkit.Mvvm\Microsoft.Toolkit.Mvvm.csproj" />
   </ItemGroup>
 
+  <Import Project="..\Brainf_ckSharp.Shared.Constants\Brainf_ckSharp.Shared.Constants.projitems" Label="Shared" />
+
 </Project>
