--- a/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
+++ b/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
@@ -133,7 +133,7 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp">
-      <Version>6.1.0-build.97</Version>
+      <Version>6.1.0-preview1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
