--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -363,7 +363,7 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.1.0-build.97</Version>
+      <Version>6.1.0-preview1.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.4.0</Version>
@@ -375,7 +375,7 @@
       <Version>4.1.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit">
-      <Version>6.1.0-build.97</Version>
+      <Version>6.1.0-preview1.2</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
