--- a/src/Brainf_ckSharp/Brainf_ckSharp.csproj
+++ b/src/Brainf_ckSharp/Brainf_ckSharp.csproj
@@ -9,8 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit" Version="6.1.0-build.97" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0-build.97" />
+    <PackageReference Include="Microsoft.Toolkit" Version="6.1.0-preview1.2" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0-preview1.2" />
   </ItemGroup>
 
   <ItemGroup>
