Minor code refactoring

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -136,7 +136,7 @@
     <Compile Include="Brainf_ckEditBox\Brainf_ckEditBox.Formatting.Lock.cs" />
     <Compile Include="Brainf_ckEditBox\Models\BracketsPairInfo.cs" />
     <Compile Include="Brainf_ckEditBox\Models\ColumnGuideInfo.cs" />
-    <Compile Include="Brainf_ckEditBox\EventArgs\PlainTextChangedEventArgs.cs" />
+    <Compile Include="Brainf_ckEditBox\EventArgs\TextChangedEventArgs.cs" />
     <Compile Include="Brainf_ckIde\Brainf_ckIde.xaml.cs">
       <DependentUpon>Brainf_ckIde.xaml</DependentUpon>
     </Compile>
