Added UI for background execution

--- a/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
+++ b/src/Brainf_ckSharp.Uwp/Brainf_ckSharp.Uwp.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Converters\Console\SyntaxValidationResultConverter.cs" />
     <Compile Include="Converters\SubPages\CodeMetadataConverter.cs" />
     <Compile Include="Converters\TypeToVisibilityConverter.cs" />
+    <Compile Include="Converters\ExecutionResultConverter.cs" />
     <Compile Include="Converters\UInt16Converter.cs" />
     <Compile Include="Converters\PivotSelectionConverter.cs" />
     <Compile Include="Converters\SubPages\UnicodeIntervalConverter.cs" />
