Added handlers for cut/copy/paste buttons

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -125,6 +125,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Brainf_ckEditBox\AttachedProperties\RoutedEventHandlerHelper.cs" />
     <Compile Include="Brainf_ckEditBox\Brainf_ckEditBox.Flyout.cs" />
     <Compile Include="Brainf_ckEditBox\Brainf_ckEditBox.Events.cs" />
     <Compile Include="Brainf_ckEditBox\Brainf_ckEditBox.Template.cs" />
