--- a/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
+++ b/src/Brainf_ckSharp.Uwp.Themes/Brainf_ckSharp.Uwp.Themes.csproj
@@ -122,6 +122,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Brainf_ckThemesExtensions.cs" />
     <Compile Include="Enums\LineHighlightStyle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Brainf_ckTheme.cs" />
@@ -137,6 +138,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Brainf_ckSharp.Shared\Brainf_ckSharp.Shared.csproj">
+      <Project>{a2b53303-9594-4975-91bd-0ecd83ad9cf1}</Project>
+      <Name>Brainf_ckSharp.Shared</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Brainf_ckSharp\Brainf_ckSharp.csproj">
       <Project>{aceea540-7a2c-4705-ac68-5a8c3a5c2a38}</Project>
       <Name>Brainf_ckSharp</Name>
