--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -171,6 +171,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
       <Version>6.1.0-preview1.2</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.UI.Xaml">
+      <Version>2.4.2</Version>
+    </PackageReference>
     <PackageReference Include="UICompositionAnimations">
       <Version>4.1.1</Version>
     </PackageReference>
