--- a/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
+++ b/src/Brainf_ckSharp.Git/Brainf_ckSharp.Git.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Experimental.Collections" Version="1.0.6-e190117-3" />
-    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0-preview1.2" />
+    <PackageReference Include="Microsoft.Toolkit.HighPerformance" Version="6.1.0-rc1" />
   </ItemGroup>
 
 </Project>
