--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -169,7 +169,7 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI">
-      <Version>6.1.0-preview1.2</Version>
+      <Version>6.1.0-rc1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.4.2</Version>
