Added analytics to breakpoint actions

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckSharp.UWP.Controls.Ide.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Brainf_ckIde\Brainf_ckIde.xaml.Win2D.Draw.cs" />
     <Compile Include="Brainf_ckIde\Brainf_ckIde.xaml.Methods.cs" />
     <Compile Include="Brainf_ckIde\Enums\IndentationType.cs" />
+    <Compile Include="Brainf_ckIde\EventArgs\BreakpointToggleEventArgs.cs" />
     <Compile Include="Brainf_ckIde\Helpers\TextGenerator.cs" />
     <Compile Include="Brainf_ckIde\Models\Abstract\IndentationIndicatorBase.cs" />
     <Compile Include="Brainf_ckIde\Models\BlockIndicator.cs" />
